chore: align project configuration to Java 17, refactor DTOs to record